- added new custom theme for Black Print - support for a WIP exhibit to use a custom theme - addressed a few accessibility contrast issues for Dr Joyce Brothers exhibit (GH #638) - renamed some files for the Dr Joyce Brothers custom theme so all custom themes will be treated the same

--- a/app/assets/stylesheets/application_dr-joyce-brothers.scss
+++ b/app/assets/stylesheets/application_dr-joyce-brothers.scss
@@ -15,6 +15,9 @@ body, header {
 
 #exhibit-navbar, footer {
   background: #ecbb35;
+  a {
+    color: #005094;
+  }
 }
 
 .navbar, #blacklight-modal {
@@ -69,7 +72,7 @@ body, header {
   }
 
   #exhibit-navbar .nav-link {
-    color: #4b5474;
+    color: #464f6f;
   }
 }
 
